[hue] Refactored discovery service to 'ThingHandlerService' (#8729)
* Refactored discovery service to ThingHandlerService
* Fixed discovery for Geofence Sensor

Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>